--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Unity WebGL Player | pixbie</title>
   </head>
   <body style="text-align: center">
-    <canvas id="unity-canvas" width=1920 height=1080 style="width: 1920px; height: 1080px; background: #231F20"></canvas>
-    <script src="Build/PixbieWeb.loader.js"></script>
+    <canvas id="unity-canvas" width=854 height=480 style="width: 854px; height: 480px; background: #231F20"></canvas>
+    <script src="Build/pixbie web.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/PixbieWeb.data",
-        frameworkUrl: "Build/PixbieWeb.framework.js",
-        codeUrl: "Build/PixbieWeb.wasm",
+        dataUrl: "Build/pixbie web.data.br",
+        frameworkUrl: "Build/pixbie web.framework.js.br",
+        codeUrl: "Build/pixbie web.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "ERstudios",
         productName: "pixbie",
